--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -1,3 +1,5 @@
+
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -48,15 +50,19 @@ table {
 }
 /** end reset css**/
 body {
+    display: flex;
+    flex-direction: column;
 	max-width: 1140px;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+    gap: 190px;
 }
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0;
+    align-items: center;
 }
 section {
 	margin: 50px 0
@@ -88,110 +94,58 @@ nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
+    vertical-align: baseline;
 }
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
-nav li:nth-child(4){
-	width: 22px;
+nav li:nth-child(3) {
+    font-weight: 600;
+}
+nav li:nth-child(4) {
+
+    width: 22px;
+    height: 22px;
 }
 nav li img {
-	width: 22px;
+    width: 22px;
+    justify-content: center;
+    align-items: center;
 }
-
 li:hover {
 	color: #B1663C;
 }
-#introduction {
-	display: flex;
-	align-items: center;
-}
-#introduction figure {
-	flex: 1
-}
-#introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
-}
-
-#introduction article {
-	flex: 1
-}
-#introduction h2 {
-	margin-bottom: 1em;
-}
-
-#introduction p {
-	margin-bottom: 0.5em;
-}
-#portfolio h2 {
-	text-align: center;
-	margin-bottom: 1em;
-}
-.btns {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 3em;
-	gap: 10px;
-}
-.btn-style {
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 16px;
-	background-color: white;
-	color: #1D6154;
-	text-align: center;
-	min-width: 100px;
-	height: 37px;
-	border-radius: 60px ;
-	border: 1px solid  #1D6154 ;
-}
-.btn-style:focus {
-	color: white;
-	background-color: #1D6154;
-}
-.gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-}
-
-.gallery img {
-	width: 100%;
-
-}
-#contact {
+#login {
 	width: 50%;
 	margin: auto;
 }
-#contact > * {
+#login > * {
 	text-align: center;
-
 }
-#contact h2{
+#login h2{
 	margin-bottom: 20px;
 }
-#contact form {
+#login form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
-	height: 50px;
-	font-size: 1.2em;
+#login input {
+	min-height: 36px;
+	font-size: 14px;
+    font-weight: 700;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#login label {
 	margin: 2em 0 1em 0;
+    font-size: 14px;
+    font-weight: 500;
 }
-#contact textarea {
+#login textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
@@ -207,9 +161,18 @@ input[type="submit"] {
 	border-radius: 60px ;
 }
 
+#login a {
+    color: black;
+    text-align: center;
+}
+
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em;
+}
+footer nav ul li {
+    font-size: 14px;
+    font-weight: 300;
 }
 
