--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -103,17 +103,11 @@ nav li {
 nav li:nth-child(3) {
     font-weight: 600;
 }
-nav li:nth-child(4) {
-
-    width: 22px;
-    height: 22px;
+a {
+	text-decoration: none;
+	color: black;
 }
-nav li img {
-    width: 22px;
-    justify-content: center;
-    align-items: center;
-}
-li:hover {
+li:hover , a:hover {
 	color: #B1663C;
 }
 #login {
