--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -58,6 +58,46 @@ header {
 	justify-content: space-between;
 	margin: 50px 0
 }
+.modal {
+	position: fixed;
+	visibility: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+.modal-wrapper {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	overflow: auto;
+	gap: 50px;
+	width: 630px;
+	max-width:  630px;
+	max-height:  680px;
+	border-radius: 10px;
+	background-color: #fff;
+	text-align: center;
+	align-items: center;
+}
+.modal-wrapper h3 {
+	font-size: 26px;
+	font-weight: 400;
+}
+.fa-xmark {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+}
+hr{
+	width: 80%;
+	color: red;
+	border-style: 1px solid black;
+}
 section {
 	margin: 50px 0
 }
@@ -141,6 +181,7 @@ li:hover , a:hover{
 	color: #1D6154;
 	text-align: center;
 	min-width: 100px;
+	max-width: 160px;
 	height: 37px;
 	border-radius: 60px ;
 	border: 1px solid  #1D6154 ;
@@ -151,6 +192,7 @@ li:hover , a:hover{
 	font-size: 16px;
 	text-align: center;
 	min-width: 100px;
+	max-width: 160px;
 	height: 37px;
 	border-radius: 60px ;
 	border: 1px solid  #1D6154 ;
