--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -79,6 +79,7 @@ header {
 	width: 630px;
 	max-width:  630px;
 	max-height:  680px;
+	padding: 20px;
 	border-radius: 10px;
 	background-color: #fff;
 	text-align: center;
@@ -95,7 +96,6 @@ header {
 }
 hr{
 	width: 80%;
-	color: red;
 	border-style: 1px solid black;
 }
 section {
@@ -115,7 +115,6 @@ h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
-;
 }
 
 h2{
@@ -181,7 +180,7 @@ li:hover , a:hover{
 	color: #1D6154;
 	text-align: center;
 	min-width: 100px;
-	max-width: 160px;
+	max-width: 200px;
 	height: 37px;
 	border-radius: 60px ;
 	border: 1px solid  #1D6154 ;
@@ -192,7 +191,7 @@ li:hover , a:hover{
 	font-size: 16px;
 	text-align: center;
 	min-width: 100px;
-	max-width: 160px;
+	max-width: 200px;
 	height: 37px;
 	border-radius: 60px ;
 	border: 1px solid  #1D6154 ;
