--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -57,14 +57,17 @@ body {
 	font-size: 14px;
 }
 .edit-mode{
+	position: sticky;
+	top: 0;
+	display: none;
 	width: 100%;
 	height: 60px;
-	display: flex;
 	background-color: black;
 	color: white;
 	justify-content: center;
 	align-items: center;
-	display: none;
+	font-size: 16px;
+	font-weight: 400;
 }
 header {
 	display: flex;
@@ -112,7 +115,7 @@ aside figure {
 aside img {
 	width: 100%;
 }
-.modal-wrapper h3 {
+.modal-wrapper h3 , .modal-add-project h3 {
 	font-size: 26px;
 	font-weight: 400;
 }
@@ -130,9 +133,75 @@ aside img {
 	top: 5px;
 	right: 5px;
 }
-hr{
+.modal-wrapper h3{
 	width: 80%;
 	border-style: 1px solid black;
+}
+.modal-add-project {
+	display: none;
+	flex-direction: column;
+	position: relative;
+	overflow: auto;
+	gap: 50px;
+	width: 630px;
+	max-width:  630px;
+	max-height:  680px;
+	padding: 60px 20px 45px 20px;
+	border-radius: 10px;
+	background-color: #fff;
+	text-align: center;
+	align-items: center;
+	z-index: 1;
+}
+.fa-arrow-left {
+	position: absolute;
+	top: 26px;
+	left: 30px;
+}
+.add-img {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #E8F1F6;
+	font-family: "Work Sans";
+	color: #CBD6DC;
+	width: 380px;
+	padding: 20px;
+	gap: 20px;
+}
+.add-img i {
+	font-size: 76px;
+}
+.add-img button {
+	width: 173px;
+	font-size: 14px;
+	font-weight: 500;
+	border-radius: 50px;
+	background-color: #CBD6DC;
+	color: #306685;
+	border: 1px solid #CBD6DC;
+	padding: 8px 0px;
+}
+.add-img p {
+	font-size: 10px;
+	font-weight: 400;
+	color: #444;
+}
+.modal-add-project input , .modal-add-project select {
+	border: none;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	width: 420px;
+	height: 51px;
+}
+form {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	gap: 20px;
+}
+form hr {
+	width: 100%;
 }
 section {
 	margin: 50px 0
