--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -64,6 +64,10 @@ header {
 	margin: 50px 0;
     align-items: center;
 }
+header ul li a:nth-child(-1n+2):hover {
+	font-weight: bold;
+	color: black
+}
 section {
 	margin: 50px 0
 }
