--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -160,6 +160,11 @@ aside img {
 	top: 26px;
 	left: 30px;
 }
+.error-msg {
+	color: red;
+	font-size: 14px;
+	display: none;
+}
 .add-img {
 	display: flex;
 	flex-direction: column;
@@ -261,10 +266,11 @@ nav li {
 a {
 	text-decoration: none;
 	color: black;
+	cursor: pointer;
 }
-li:hover , a:hover{
+/* li:hover , a:hover{
 	color: #B1663C;
-}
+} */
 #introduction {
 	display: flex;
 	align-items: center;
@@ -295,6 +301,9 @@ li:hover , a:hover{
 }
 #portfolio h2 {
 	text-align: center;
+}
+button , input {
+	cursor: pointer;
 }
 .btn-open-modal {
 	display: flex;
